--- a/Memorizz.Host/Memorizz.Host.csproj
+++ b/Memorizz.Host/Memorizz.Host.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>cec4d64e-387b-4239-89af-a42e323a684c</UserSecretsId>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,10 +19,7 @@
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Domain\Services\" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.7.3" />
     </ItemGroup>
 
 </Project>
